front page figure

--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -251,6 +251,9 @@ A corollary of our study is that the Saneblidze--Umble diagonal can be recovered
 \vspace*{.1cm}
 \maketitle
 
+\centerline{\includegraphics[scale=.9]{diagonalPermutahedron3}}
+
+\newpage
 \tableofcontents
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1420,7 +1423,7 @@ which vanishes by~\eqref{eq:diff}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Face poset and combinatorial description of~$\multiBraidArrangement$}
+\section{Face poset and combinatorial description of~$\multiBraidArrangement(\b{a})$}
 \label{sec:facePoset}
 
 In this section, we describe the face poset of~$\multiBraidArrangement(\b{a})$ in terms of ordered $(\ell,n)$-partition forests.
