--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1460,6 +1460,18 @@ Moreover, the inclusion of faces of~$\multiBraidArrangement(\b{a})$ translates t
 Finally, by genericity, it is immediate that we obtain an upper set of this componentwise refinement order.
 \end{proof}
 
+\begin{figure}
+	\includegraphics[scale=.9]{B23a}
+	\caption{Labelings of the faces of the arrangement~$\multiBraidArrangement[3][2](\b{a})$ for~$\b{a} = ???$.}
+	\label{fig:B23a}
+\end{figure}
+
+\begin{figure}
+	\includegraphics[scale=.9]{B23b}
+	\caption{Labelings of the faces of the arrangement~$\multiBraidArrangement[3][2](\b{a})$ for~$\b{a} = ???$.}
+	\label{fig:B23b}
+\end{figure}
+
 We now fix a generic translation matrix~$\b{a} \eqdef (a_{i,j})$ and still denote by~$A_{i,s,t} \eqdef \smash{\sum_{s \le j < t} a_{i,j}}$ for all~$1 \le s < t \le n$ and~$i \in [\ell]$.
 The objective of this section is to describe
 \begin{itemize}
@@ -1839,6 +1851,7 @@ We use the shorthand $14|23$ to denote both the unordered  partition $\{\{1,4\},
 \end{figure}
 \vincent{I have included this picture here to be sure that we don't forget it. I should make one for the SU diagonal~$\SUD$ as well.}
 \Kurt{I think there is a typo, $23|1\times 1|2|3$ on top left edge, should be $23|1\times 3|2|1$.}
+\vincent{You are right! thank you. I just corrected it.}
 
 Let us recall the universal formula expressing combinatorially the cellular image of the diagonal of a polytope $P$ obtained in \cite[Theorem 1.26]{LA21}.
 It is expressed in terms of the \emph{fundamental hyperplane arrangement} of $P$. 
