--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -30,6 +30,16 @@
 	PAGES = {401--411},
 }
 
+@book {Ziegler-polytopes,
+	AUTHOR = {G{\"u}nter~M.~Ziegler},
+	TITLE = {Lectures on Polytopes},
+	SERIES = {Graduate texts in Mathematics},
+	PUBLISHER = {Springer-Verlag},
+	ADDRESS = {New York},
+	VOLUME = {152},
+	YEAR = {1998},
+	PAGES = {vii+370},
+}
 
 @Article{Rota,
  Author = {Rota, Gian-Carlo},
