--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1590,7 +1590,7 @@ The usual \emph{thin diagonal} of a topological space $X$ is the map $\Delta : X
 \end{definition}
 
 A powerful geometric technique to define face-coherent cellular diagonals on polytopes first appeared in \cite{fultonIntersectionTheoryToric1997a}, was presented in \cite{masudaDiagonalAssociahedra2021}, and was fully developed in \cite{LA21}.
-The key idea is the following: any vector $\vec v$ in generic position with respect to $P$ defines a cellular diagonal~$\triangle_{(P,\vec v)}$, via the following formula
+The key idea is the following: any vector $\vec v$ in generic position with respect to $P$ defines a cellular diagonal~$\triangle_{(P,\vec v)}$, via the formula
 \begin{align*}
     \begin{array}{rlcl}
     \triangle_{(P,\vec v)}\  : & P &\to  &P\times P\\
@@ -1615,7 +1615,7 @@ Such a map can be seen as a topological map, or as a map of lattices; we shall n
     Alternatively, it is the $f$-vector of the polytopal complex~$\pi (\triangle_{(P,\vec v)})$.
 \end{definition}
 
-For the purpose of studying this $f$-vector, one can study the dual of the polytopal comple, see \cref{fig:diagonalPermutahedron1}.
+For the purpose of studying this $f$-vector, one can study the dual of the polytopal complex, see \cref{fig:diagonalPermutahedron1}.
 
 \begin{proposition}
     The $f$-vector of the $(\ell-1)$th iteration of a diagonal of the $(n-1)$-permutahedron $\triangle_{(P,\vec v)}$ is given by the opposite of the $f$-vector of the $(\ell,n)$-braid arrangement.
@@ -2110,7 +2110,7 @@ The orientation vectors $\vec v=(v_1,\ldots,v_{n}) \in \R^n$ inducing each of th
 where $O(n)$ stands for either $\LA(n), \LA(n)^\op, \SU(n)$ or $\SU(n)^\op$.
 
 \begin{remark}
-    This answers by the negative a conjecture regarding unicity of diagonals on the permutahedra, raised at the beginning of \cite[Section 3]{SaneblidzeUmble04}, and could be seen as a ``corrected" version of it. \Guillaume{See the next section where we prove that SU diagonal is SU diagonal}
+    This answers by the negative a conjecture regarding unicity of diagonals on the permutahedra, raised at the beginning of \cite[Section 3]{SaneblidzeUmble04}, and could be seen as an alternative statement. \Guillaume{See the next section where we prove that SU diagonal is SU diagonal}
 \end{remark}
 
 %%%%%%%%%%%%%%%
@@ -2175,75 +2175,53 @@ We will show this second isomorphism has the conceptual benefit of sending left 
 
 \subsection{Facets of operadic diagonals}
 
-We have seen in \cref{subsec:multiBraidArrangement} that facets of any diagonal of the permutahedron are in bijection with $(2,n)$-trees, that is, a pair of unordered partitions of $[n]$ whose intersection graph is a tree.
-These pairs of partitions were first studied and called essential complementary partitions in \cite{chen1969computer,chen1971tables,kajitani1982number}, as such we will denote the set of all $(2,n)$-trees by $\EC$.\Kurt{A historic nod, but this way don't need to define.}
-In this section, we prove that particular orderings of $\EC$ recover the four operadic diagonals of \cref{prop:unique-operad}.\Guillaume{Simplify and unify exposition with Section 1}
-\Kurt{A bit better but feel free to doctor further.}
+We have seen in \cref{subsec:multiBraidArrangement} that facets of any diagonal of the permutahedron are in bijection with $(2,n)$-trees, that is, pairs of unordered partitions of $[n]$ whose intersection graph is a tree.
+These pairs of partitions were first studied and called essential complementary partitions in \cite{chen1969computer,chen1971tables,kajitani1982number}, as such we will denote the set of all $(2,n)$-trees by $\EC$. \Guillaume{change notation for $(2,n)$-trees}
+In this section, we prove that particular orderings of $\EC$ recover the facets of the four operadic diagonals of \cref{prop:unique-operad}.
+
+\begin{construction}
+\label{const:orienting-function}
+Given an operadic diagonal $\triangle$, we define an ordering function $o:\EC\to \OP$ from the set of $(2,n)$-trees to the set of facets of $\triangle$ as follows. 
+Let $(\sigma,\tau)$ be a $(2,n)$-tree, and let $a,b$ be two vertices of $\sigma$ or $\tau$.
+We say that $a < b$ if the unique path $\gamma$ from $a$ to $b$ is such that
+\begin{itemize}
+    \item $\min \gamma$ is oriented from left to right (resp. right to left) if $\triangle=\LAD$ (resp. $\triangle=(\LAD)^{\op}$),
+    \item $\max \gamma$ oriented from right to left (resp. left to right) if $\triangle=\SUD$ (resp. $\triangle=(\SUD)^{op})$.
+\end{itemize}
+\end{construction}
+
+The main result of this Section is the following. 
 
 \begin{theorem}
 \label{thm:facets}
-There exists a bijective ordering function $o:\EC\to \OP$, for each of the operadic diagonals.
-For any $(\sigma,\tau) \in \EC$, we order any two vertices on the same side, i.e. $a,b\in \sigma$, or $a,b\in \tau$, by directing the unique path $\gamma$ connecting them.
-If the path points $a\to b$, then $a<b$.
-Each diagonal orients every path by extending the orientation of a particular path element,
-\begin{enumerate}
-    \item $\min \gamma$ oriented left to right (right to left) yields $o(\sigma,\tau) \in \LAD$ (resp. $o(\sigma,\tau) \in (\LAD)^{op})$ )
-    \item $\max \gamma$ oriented right to left (left to right) yields $o(\sigma,\tau) \in \SUD$ (resp. $o(\sigma,\tau) \in (\SUD)^{op})$ ).
-\end{enumerate}
+For any operadic diagonal $\triangle$, the ordering function $o:\EC\to \OP$ is a bijection between the set of $(2,n)$-trees and the set of facets of $\triangle$. 
 \end{theorem}
 
 \begin{proof}
-In this section, we first prove this theorem for $\LAD$, via the following lemmas,
-\begin{itemize}
-    \item The function $u:\LAD\to \EC$, which forgets the order of the blocks, is well defined (\cref{l:u-well-defined}).
-    \item The ordering function $o:\EC \to \LAD$ is well defined. In particular, 
-    \begin{itemize}
-        \item it totally orders the vertices on each side (\cref{l:o-provides-total-order}), and
-        \item it produces elements of $\LAD$ (\cref{l:o-well-defined}).
-    \end{itemize}
-    \item The functions $u,o$ are mutual inverses (\cref{l:o and u inverses}).
-\end{itemize}
-Then, we transfer the result to the other operadic diagonals via isomorphism (\cref{l:Non LA ordering functions}).
+First, we prove the statement for the $\LA$ diagonal $\LAD$, then transport it to the other diagonals via the isomorphisms between them (\cref{l:Non LA ordering functions}). 
+The proof for $\LAD$ consists in first checking that the ordering function $o:\EC \to \LAD$ is well defined, in particular checking that it totally orders the vertices on each side (\cref{l:o-provides-total-order}), and it produces elements of $\LAD$ (\cref{l:o-well-defined}), and second verifying that the function $u:\LAD\to \EC$, which forgets the order of the blocks defines an inverse (\cref{l:o and u inverses}).
 \end{proof}
 
 We now prove the requisite lemmas, whilst providing clarifying examples.
-\begin{lemma} 
-\label{l:u-well-defined}
-The function $u:\OP \to \EC$ that forgets the order in a pair of partitions is well defined.
+
+\begin{lemma}
+\label{l:o-provides-total-order}
+For any $(2,n)$-tree $(\sigma, \tau)$, the ordering function $o:\EC\to \LAD$ provides a total order of the blocks of the unordered partitions $\sigma$ and $\tau$. 
 \end{lemma}
 \begin{proof}
-Let $(\sigma,\tau)$ be a pair of ordered partitions forming a facet of $\LAD$. 
-Their intersection graph has $n+1$ vertices and $n$ edges, and as no vertices can be isolated it must be a tree. 
-%It is straightforward to verify that it must be a labeled bipartite tree, but here is how we may explicitly produce the necessary distinct representatives using an algorithm of \cite[Theorem 2]{kajitani1982number}.
-%Let $G'$ be a copy of $G(u(P))$. 
-%While there is a vertex of degree $1$ in $G'$ delete it and add the sole edge of that vertex as a distinct representative of the corresponding partition of that vertex. 
-%As $G'$ is a tree this process can continue until there is a single edge connecting two vertices of degree $1$. 
-%This edge specifies the element $p$ of the distinct representatives.
+The order defined in \cref{const:orienting-function} is clearly total, reflexive (by convention) and anti-symmetric, what remains to be checked is its transitivity.
+Let $a,b,c$ all be vertices of $\sigma$ or $\tau$, and let $\gamma_{ab},\gamma_{bc}$ denote the unique minimal paths between them.
+Suppose that the paths have been oriented such that $a<b$ and $b<c$, and let us show that this implies $a<c$.
+First observe that $\gamma_{ac}= (\gamma_{ab} \cup \gamma_{bc}) \ssm (\gamma_{ab} \cap \gamma_{bc})$.
+As $a<b$ and $b<c$ it must be the case that the intersection $(\gamma_{ab} \cap \gamma_{bc})$ is traversed in opposite directions by the paths $\gamma_{ab}$ and $\gamma_{bc}$; this implies that neither of the minima of paths are in $(\gamma_{ab} \cap \gamma_{bc})$. 
+Thus, the minimum of $\gamma_{ac}$, which is one of the two preceding minima, is traversed from left to right. 
 \end{proof}
 
-\begin{lemma}\label{l:o-provides-total-order}
-The ordering $o:\EC\to \LAD$ totally orders the vertices of each side.
-\end{lemma}
-\begin{proof}
-Let $(\sigma,\tau)\in \EC$, and let $a,b$ be any pair of vertices on the same side.
-As every element of $(2,n)$ is a bipartite tree, $a$ and $b$ are connected by a unique minimal path of even length $\delta_{ab}$.
-Orienting the minimal element $i_{ab}$ of this path, so that it points from an element of $\sigma$ to an element of $\tau$ (i.e. left to right), then extending this orientation along the entire path, orients the path $a\to b$ or $b\to a$.
-This method of ordering vertices is clearly total, reflexive (by convention) and anti-symmetric, what remains to be checked is its transitivity.
-\\\\
-Let $a,b,c$ all be vertices on the same side, and let $\delta_{ab},\delta_{bc}$ be the unique minimal paths between them.
-Suppose that $a<b$ and $b<c$ as a result of orienting $i_{ab},i_{bc}$, then we are required to show that $a<c$.
-Observe that $\delta_{ac}= (\delta_{ab} \cup \delta_{bc}) \ssm (\delta_{ab} \cap \delta_{bc})$.
-As $a<b$ and $b<c$ it must be the case that when we orient each $\delta_{ab},\delta_{bc}$ through their minimal elements, that $(\delta_{ab} \cap \delta_{bc})$ is traversed in opposite directions by the paths $\delta_{ab}$ and $\delta_{bc}$.
-This implies that $\min \{i_{ab},i_{bc} \} \not \in \delta_{ab} \cap \delta_{bc}$.
-Consequently, it must be the case that $i_{ac}:=\min \delta_{a,c} = \min \{i_{ab},i_{bc} \}$, which orients $a\to c$ implying $a<c$.
-\end{proof}
-
-We will show that this ordering produces elements of the $\LAD$ diagonal, as each oriented path $\gamma_{ab}$ will correspond to satisfying a specific $(I,J) \in \LA$.
-We first present a clarifying example.
+The key observation in proving \cref{thm:facets} is that paths between pairs of vertices in a $(2,n)$-tree $(\sigma,\tau)$ correspond to $(I,J)$ conditions defining an operadic diagonal (see \cref{s:diagonals-permutahedra}). 
 
 \begin{example}
 \label{ex:ECbijection}
-We display the ordering (right) of the $(2,7)$-tree $\{15,234,6,7\} \times \{13,2,46,57\}$ (left).
+The $(2,7)$-tree $\{15,234,6,7\} \times \{13,2,46,57\}$ (left) is ordered according to \cref{const:orienting-function}, giving a facet of $\LAD$ (right).
 \begin{center}
 \begin{tikzpicture}[scale=.7]  
 \node (1) at (-1.5, -1) {$15$};
@@ -2287,19 +2265,18 @@ $\quad$
 %
 \end{tikzpicture}
 \end{center}
-Here are two examples of paths providing order information, 
+Two paths providing order information are, 
 \begin{align*}
-	7 <_L 234 \text{ as } 7 \xrightarrow{7} 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \ \text{corresponds to } (I,J)=(\{1,7\},\{3,5\}), \\
-	57 <_R 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \xrightarrow{4} 46 \ \text{corresponds to } (I,J)=(\{1,4\},\{3,5\}).
+	7 < 234 \text{ as } 7 \xrightarrow{7} 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \ \text{corresponds to } (I,J)=(\{1,7\},\{3,5\}), \\
+	57 < 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \xrightarrow{4} 46 \ \text{corresponds to } (I,J)=(\{1,4\},\{3,5\}).
 \end{align*}
 \end{example}
 
-First, we need a geometrical result. 
 
 \begin{proposition}
     \label{prop:geometrical-IJ}
     Let $(\sigma,\tau) \in \LAD$.
-    The paths between adjacent vertices of $\sigma$ or $\tau$ are in bijection with the minimal $(I,J)$-pairs (see \cref{s:diagonals-permutahedra}).
+    The paths between adjacent vertices of $\sigma$ or $\tau$ are in bijection with the minimal $(I,J)$-pairs.
 \end{proposition}
 
 \begin{proof}
@@ -2313,6 +2290,7 @@ First, we need a geometrical result.
     Thus, the path encodes the series of equations $x_{e_1}+x_{e_{k-1}}=0$, $x_{e_1}+x_{e_2}=0$, $x_{e_2}+x_{e_3}=0$, $\ldots$, $x_{e_{k-2}}+x_{e_{k-1}}=0$. 
     Thus, $x_{e_1}=1$, $x_{e_2}=-1$, $x_{e_3}=1$, $\ldots$, $x_{e_{k-2}}=1$, $x_{e_{k-1}}=-1$ is a basis of one-dimensional space of solutions, and it gives the corresponding minimal $(I,J)$-pair. 
 \end{proof}
+
 
 \begin{lemma} \label{l:o-well-defined}
 The ordering function $o:\EC \to \LAD$ is well defined.
@@ -2345,9 +2323,10 @@ So the only way for the condition to be satisfied is for $\sigma_l$ to come befo
     It would be interesting to know if there is a geometrical interpretation of the paths that are not between adjacent vertices. 
 \end{remark}
 
-We now complete the proof that $o:\EC\to \LAD$ is a bijective with the following lemma.
+Since the intersection graph of a pair of ordered partitions defining a facet of $\LAD$ has $n+1$ vertices and $n$ edges, and as no vertices can be isolated it must be a tree, The function $u:\OP \to \EC$ that forgets the order in a pair of partitions is well defined.
 
-\begin{lemma}\label{l:o and u inverses}
+\begin{lemma}
+\label{l:o and u inverses}
 The functions $o:\EC\to \LAD$ and $u:\LAD \to \EC$ are mutual inverses.
 \end{lemma}
 \begin{proof}
@@ -2355,15 +2334,16 @@ The forgetful function $u$ is clearly the inverse to $o$, as forgetting any assi
 The ordering function $o$ is the inverse to $u$, as it returns the sole ordering of the blocks which is compatible with the $\LA(n)$ conditions.
 \end{proof}
 
-\begin{lemma} \label{l:Non LA ordering functions}
-The other ordering functions of \cref{thm:facets} are well-defined and bijective.
+\begin{lemma} 
+\label{l:Non LA ordering functions}
+The other ordering functions of \cref{const:orienting-function} are well-defined and bijective.
 \end{lemma}
 \begin{proof}
 To obtain the $\SU$ ordering, we apply the isomorphism $rs\times rs$ (\cref{thm:bijection-operadic-diagonals}) and track what happens to each path.
 To obtain the $\LA^{op}$ and $\SU^{op}$ orderings, we reverse these orders.
 \end{proof}
 
-We illustrate how the isomorphism $rs\times rs$ from \cref{thm:bijection-operadic-diagonals} relates the two results.
+We end this Section by illustrating how the isomorphism $rs\times rs$ from \cref{thm:bijection-operadic-diagonals} relates the two results.
 
 \begin{example}
 \label{ex:theta-path-translation}
@@ -2423,6 +2403,8 @@ are mapped to $\SU(7)$ conditions corresponding to paths, e.g. the prior $(I,J)$
 \end{align*}
 \end{example}
 Note that the composite $\LAD \xrightarrow{u} \EC \xrightarrow{o} \SUD$ provides another bijection between facets, however this map is not equal to $rs \times rs$ and is not defined on the other faces.
+
+
 
 \Kurt{A necessary condition for any shift description of $(l,n)$-trees would be having a generalised order for it.
 Not sure what an obvious extension of this order would be.
