--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -2186,23 +2186,12 @@ Let $(\sigma,\tau)$ be a $(2,n)$-tree, and let $a,b$ be two vertices of $\sigma$
 We say that $a < b$ if the unique path $\gamma$ from $a$ to $b$ is such that
 \begin{itemize}
     \item $\min \gamma$ is oriented from left to right (resp. right to left) if $\triangle=\LAD$ (resp. $\triangle=(\LAD)^{\op}$),
-    \item $\max \gamma$ oriented from right to left (resp. left to right) if $\triangle=\SUD$ (resp. $\triangle=(\SUD)^{op})$.
+    \item $\max \gamma$ oriented from right to left (resp. left to right) if $\triangle=\SUD$ (resp. $\triangle=(\SUD)^{\op})$.
 \end{itemize}
 \end{construction}
 
-The main result of this Section is the following. 
-
-\begin{theorem}
-\label{thm:facets}
-For any operadic diagonal $\triangle$, the ordering function $o:\EC\to \OP$ is a bijection between the set of $(2,n)$-trees and the set of facets of $\triangle$. 
-\end{theorem}
-
-\begin{proof}
-First, we prove the statement for the $\LA$ diagonal $\LAD$, then transport it to the other diagonals via the isomorphisms between them (\cref{l:Non LA ordering functions}). 
-The proof for $\LAD$ consists in first checking that the ordering function $o:\EC \to \LAD$ is well defined, in particular checking that it totally orders the vertices on each side (\cref{l:o-provides-total-order}), and it produces elements of $\LAD$ (\cref{l:o-well-defined}), and second verifying that the function $u:\LAD\to \EC$, which forgets the order of the blocks defines an inverse (\cref{l:o and u inverses}).
-\end{proof}
-
-We now prove the requisite lemmas, whilst providing clarifying examples.
+We now aim at proving that this ordering function is in fact a bijection in \cref{thm:facets}. 
+To this end we need a few intermediary results. 
 
 \begin{lemma}
 \label{l:o-provides-total-order}
@@ -2217,7 +2206,7 @@ As $a<b$ and $b<c$ it must be the case that the intersection $(\gamma_{ab} \cap 
 Thus, the minimum of $\gamma_{ac}$, which is one of the two preceding minima, is traversed from left to right. 
 \end{proof}
 
-The key observation in proving \cref{thm:facets} is that paths between pairs of vertices in a $(2,n)$-tree $(\sigma,\tau)$ correspond to $(I,J)$ conditions defining an operadic diagonal (see \cref{s:diagonals-permutahedra}). 
+The key observation in proving \cref{thm:facets} is that paths between pairs of vertices in a $(2,n)$-tree correspond to $(I,J)$ conditions defining an operadic diagonal (see \cref{s:diagonals-permutahedra}). 
 
 \begin{example}
 \label{ex:ECbijection}
@@ -2265,17 +2254,16 @@ $\quad$
 %
 \end{tikzpicture}
 \end{center}
-Two paths providing order information are, 
+Two paths providing order information are
 \begin{align*}
-	7 < 234 \text{ as } 7 \xrightarrow{7} 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \ \text{corresponds to } (I,J)=(\{1,7\},\{3,5\}), \\
-	57 < 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \xrightarrow{4} 46 \ \text{corresponds to } (I,J)=(\{1,4\},\{3,5\}).
+	7 < 234 \text{ as } 7 \xrightarrow{7} 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \ \text{corresponding to } (I,J)=(\{1,7\},\{3,5\}), \\
+	57 < 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \xrightarrow{4} 46 \ \text{corresponding to } (I,J)=(\{1,4\},\{3,5\}).
 \end{align*}
 \end{example}
 
-
 \begin{proposition}
     \label{prop:geometrical-IJ}
-    Let $(\sigma,\tau) \in \LAD$.
+    Let $(\sigma,\tau)$ be a facet of the $\LA$ diagonal $\LAD$.
     The paths between adjacent vertices of $\sigma$ or $\tau$ are in bijection with the minimal $(I,J)$-pairs.
 \end{proposition}
 
@@ -2291,31 +2279,31 @@ Two paths providing order information are,
     Thus, $x_{e_1}=1$, $x_{e_2}=-1$, $x_{e_3}=1$, $\ldots$, $x_{e_{k-2}}=1$, $x_{e_{k-1}}=-1$ is a basis of one-dimensional space of solutions, and it gives the corresponding minimal $(I,J)$-pair. 
 \end{proof}
 
-
 \begin{lemma} \label{l:o-well-defined}
 The ordering function $o:\EC \to \LAD$ is well defined.
 \end{lemma}
 
 \begin{proof}
-We seek to show that every $(I,J) \in \LA(n)$ is satisfied by the ordered $o(\sigma,\tau)$.
-Given \cref{prop:geometrical-IJ}, it is sufficient to show that it satisfies the minimal $(I,J)$ pairs corresponding to paths between all the adjacent ordered vertices of $\sigma$ and $\tau$.
-As such, it is sufficient to prove that for any two ordered vertices $\sigma_l<\sigma_{l'}$ in $\sigma$ (or $\tau_r<\tau_{r'}$ in $\tau$), that the path connecting them corresponds to a satisfied $I,J$ condition.
-We provide the proof for $\sigma$, and $\tau$ proceeds similarly.
-As $\sigma_l<\sigma_{l'}$, the path connecting them is of the form
+Let $(\sigma,\tau)$ be a $(2,n)$-tree.
+By \cref{l:o-provides-total-order}, we have the blocks of $o(\sigma,\tau)$ a totally ordered. 
+It remains to show that the ordered pair $o(\sigma,\tau)$ belongs to the $\LA$ diagonal, i.e. it satisfies every minimal $(I,J)$ condition of \cref{p:minimal}.
+By \cref{prop:geometrical-IJ}, these are given by the paths between adjacent vertices of $o(\sigma,\tau)$.
+Let us consider two such ordered vertices $\sigma_l<\sigma_{l'}$ in $\sigma$ (the situation for $\tau$ is similar).
+The path connecting them is of the form
 \begin{align*}
     \sigma_l = \sigma_{l_1} \xrightarrow{i_1} \tau_{r_1}\xrightarrow{j_1} \sigma_{l_2} \xrightarrow{i_2}\dots \xrightarrow{i_{k}} \tau_{r_{k-1}} \xrightarrow{j_k} \sigma_{l_k}= \sigma_{l'}
 \end{align*}
-Given the path has been oriented by forcing the minimal element to point from $\sigma$ to $\tau$ we know that $(I,J) := (\{i_1,\dots,i_k\},\{j_1,\dots,j_k\}) \in LA(n)$.
+and we have $(I,J) := (\{i_1,\dots,i_k\},\{j_1,\dots,j_k\}) \in \LA(n)$ since the minimal element points from~$\sigma$ to $\tau$.
 Furthermore, each block of $\tau$ either contains a single element of $I$ and a single element of $J$, or it contains no elements of $I$ and no elements of $J$. 
 As such, for any ordering of the blocks of $\tau$ we have that
-\begin{align*}
-    \forall m, \bigg|\bigcup_{1\leq k \leq m} \tau_{k} \cap I \bigg| = \bigg|\bigcup_{1\leq k \leq m} \tau_{k} \cap J \bigg| \ .
-\end{align*}
-Hence in order for $(I,J)$ to be satisfied it must be the case that,
-\begin{align*}
-    \exists m, \bigg| \bigcup_{1\leq k \leq m} \sigma_k \cap I \bigg| > \bigg|\bigcup_{1\leq k \leq m} \sigma_k \cap J \bigg| \ .
-\end{align*}
-Every block of $\sigma$ excluding $\sigma_l$ and $\sigma_{l'}$ either contains no elements of both $I$ and $J$, or contains a single element of $I$ and a single element of $J$. 
+$
+    \forall m, \big|\bigcup_{1\leq k \leq m} \tau_{k} \cap I \big| = \big|\bigcup_{1\leq k \leq m} \tau_{k} \cap J \big| \ .
+$
+Hence in order for the $(I,J)$ condition to be satisfied it must be the case that
+$
+    \exists m, \big| \bigcup_{1\leq k \leq m} \sigma_k \cap I \big| > \big|\bigcup_{1\leq k \leq m} \sigma_k \cap J \big| \ .
+$
+Every block of~$\sigma$ excluding $\sigma_l$ and $\sigma_{l'}$ either contains no elements of both $I$ and $J$, or contains a single element of $I$ and a single element of $J$. 
 So the only way for the condition to be satisfied is for $\sigma_l$ to come before $\sigma_{l'}$, which is precisely what is required by the total order.
 \end{proof}
 
@@ -2323,31 +2311,28 @@ So the only way for the condition to be satisfied is for $\sigma_l$ to come befo
     It would be interesting to know if there is a geometrical interpretation of the paths that are not between adjacent vertices. 
 \end{remark}
 
-Since the intersection graph of a pair of ordered partitions defining a facet of $\LAD$ has $n+1$ vertices and $n$ edges, and as no vertices can be isolated it must be a tree, The function $u:\OP \to \EC$ that forgets the order in a pair of partitions is well defined.
+We are now ready to prove the main result of this Section. 
 
-\begin{lemma}
-\label{l:o and u inverses}
-The functions $o:\EC\to \LAD$ and $u:\LAD \to \EC$ are mutual inverses.
-\end{lemma}
+\begin{theorem}
+\label{thm:facets}
+For any operadic diagonal $\triangle$, the ordering function $o:\EC\to \OP$ is a bijection between the set of $(2,n)$-trees and the set of facets of $\triangle$. 
+\end{theorem}
+
 \begin{proof}
-The forgetful function $u$ is clearly the inverse to $o$, as forgetting any assigned order will clearly return the original bipartite tree. 
-The ordering function $o$ is the inverse to $u$, as it returns the sole ordering of the blocks which is compatible with the $\LA(n)$ conditions.
+First, we prove the statement for the $\LA$ diagonal $\LAD$. 
+By \cref{l:o-well-defined}, the ordering function $o:\EC \to \LAD$ is well defined.
+Now, the intersection graph of a facet of the diagonal $\LAD$ has $n+1$ vertices and $n$ edges, thus it defines a $(2,n)$-tree, and the function $u:\OP \to \EC$ which forgets the order in a pair of partitions is well defined.
+It is clear that the two functions $o$ and $u$ are mutual inverses, thus we have a bijection. 
+To obtain the $\SU$ ordering, we apply the isomorphism $rs\times rs$ from \cref{thm:bijection-operadic-diagonals} and track what happens to each path.
+The facets of $\LA^{op}$ and $\SU^{op}$ are obtained by reversing these orders.
 \end{proof}
 
-\begin{lemma} 
-\label{l:Non LA ordering functions}
-The other ordering functions of \cref{const:orienting-function} are well-defined and bijective.
-\end{lemma}
-\begin{proof}
-To obtain the $\SU$ ordering, we apply the isomorphism $rs\times rs$ (\cref{thm:bijection-operadic-diagonals}) and track what happens to each path.
-To obtain the $\LA^{op}$ and $\SU^{op}$ orderings, we reverse these orders.
-\end{proof}
-
-We end this Section by illustrating how the isomorphism $rs\times rs$ from \cref{thm:bijection-operadic-diagonals} relates the two results.
+We end this Section by illustrating how the isomorphism $rs\times rs$ from \cref{thm:bijection-operadic-diagonals} relates the $\LA$ and $\SU$ orders. 
 
 \begin{example}
 \label{ex:theta-path-translation}
-We apply $rs\times rs$ to the element of $\LAD$ from \cref{ex:ECbijection}
+Consider the facet of $\LAD$ from \cref{ex:ECbijection}.
+The isomorphism $rs\times rs$ gives the following facet of $\SUD$
 \begin{center}
 \begin{tikzpicture}[scale=.7]  
 \node (1) at (-1.5, -1) {$15$};
@@ -2393,17 +2378,19 @@ We apply $rs\times rs$ to the element of $\LAD$ from \cref{ex:ECbijection}
 %
 \end{tikzpicture} \ .
 \end{center}
-Observe that the $\LA(7)$ conditions corresponding to paths, such as $( \{1,4\},\{3,5\}) \in \LA(7)$
+Observe that the $\LA(7)$ conditions corresponding to paths, such as $( \{1,4\},\{3,5\})$, which implies that
 \begin{align*}
-    57 <_R 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \xrightarrow{4} 46
+    57 < 46 \quad \text{  as  } \quad 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \xrightarrow{4} 46 \ ,
 \end{align*}
-are mapped to $\SU(7)$ conditions corresponding to paths, e.g. the prior $(I,J)$-condition maps to $(r(J),r(I))=( \{3,5 \},\{4,7\}) \in \SU(7)$, and
+are mapped to $\SU(7)$ conditions corresponding to paths, e.g. the prior $(I,J)$-condition maps to~$(r(J),r(I))=( \{3,5 \},\{4,7\})$, which implies that
 \begin{align*}
-    24 <_R 13 \text{ as } 24 \xrightarrow{4} 456 \xrightarrow{5} 57 \xrightarrow{7=\max(r(J)\cup r(I))} 37 \xrightarrow{3} 13 \ .
+    24 < 13 \quad \text{ as } 24 \xrightarrow{4} 456 \xrightarrow{5} 57 \xrightarrow{7=\max(r(J)\cup r(I))} 37 \xrightarrow{3} 13 \ .
 \end{align*}
 \end{example}
-Note that the composite $\LAD \xrightarrow{u} \EC \xrightarrow{o} \SUD$ provides another bijection between facets, however this map is not equal to $rs \times rs$ and is not defined on the other faces.
 
+\begin{remark}
+    Note that the composite $\LAD \xrightarrow{u} \EC \xrightarrow{o} \SUD$ provides another bijection between facets, however this map is not equal to $rs \times rs$ and is not defined on the other faces.
+\end{remark}
 
 
 \Kurt{A necessary condition for any shift description of $(l,n)$-trees would be having a generalised order for it.
